--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -428,7 +428,12 @@ body {
   margin-top: 5vh;
   margin-left: 1vw;
 }
-
+@media screen and (max-width: 1210px) {
+  .wavy::after {
+    font-size: 1.1rem;
+    margin-top: 3vh;
+  }
+}
 @media screen and (max-width: 760px) {
   .wavy::after {
     font-size: 1.1rem;
