--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -10,6 +10,20 @@ body {
   font-size: 1.6rem;
 }
 
+::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #555;
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #ddd;
+}
+
 #body {
   overflow: hidden !important;
 }
@@ -31,6 +45,59 @@ body {
   display: block;
   transition: transform 0.5s ease-in, left 0.5s ease-out;
   pointer-events: none !important;
+  text-align: center;
+}
+
+.preloader .loading-bar span {
+  display: inline-block;
+  font-family: "Shadows Into Light";
+  font-size: 1.2rem;
+  letter-spacing: 1px;
+  color: rgb(119, 145, 145);
+  margin-bottom: 20px;
+}
+
+.loading-bar {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  width: 400px;
+  height: 160px;
+}
+@media screen and (max-width: 420px) {
+  .loading-bar {
+    width: 340px;
+  }
+}
+
+@media screen and (max-width: 350px) {
+  .loading-bar {
+    width: 260px;
+  }
+}
+
+.loading-fill {
+  height: 1px;
+  background: rgb(124 112 112 / 30%);
+}
+
+.filling {
+  background: linear-gradient(to right, #08fdd8, #710e85);
+  height: 1px;
+  animation: fill 1s;
+}
+@keyframes fill {
+  0% {
+    width: 0%;
+    background-color: linear-gradient(to right, #08fdd8, #710e85);
+  }
+  100% {
+    width: 100%;
+    background-color: linear-gradient(to right, #08fdd8, #710e85);
+  }
 }
 
 #preloader.active {
@@ -150,6 +217,15 @@ body {
   }
 }
 
+.main-menu-contact {
+  left: 13%;
+}
+@media screen and (max-width: 1191px) {
+  .main-menu-contact {
+    left: 30%;
+  }
+}
+
 .main-menu-list {
   padding: 0;
   margin: 0;
@@ -207,36 +283,114 @@ body {
 @media (max-width: 992px) {
   .navbar {
     overflow: hidden;
-    background-color: #333333;
+    background-color: rgb(24 1 24);
     position: fixed;
     top: 0;
-    left: 0;
     width: 100%;
     z-index: 99;
     opacity: 0.75;
     display: block;
     padding: 0;
+    text-align: center;
   }
   .navbar a {
     color: #f4eeee;
     opacity: 1;
-    margin: 5px;
+    font-size: 0.9rem;
   }
 }
 
-.navbar-toggler {
+.navbar a:hover {
+  color: teal;
+}
+
+#nav-icon2 {
+  width: 40px;
+  height: 45px;
   position: fixed;
   top: 0;
-  right: 0;
-  max-width: 50px;
-  max-height: 50px;
-  background-color: rgb(187, 187, 187);
-  border-radius: 5px;
-  display: block;
-  box-shadow: none;
+  right: 0.5%;
+  transform: rotate(0deg);
+  transition: 0.5s ease-in-out;
+  cursor: pointer;
+  background-color: transparent;
+  border: none;
 }
-.navbar-toggler:focus {
-  box-shadow: none;
+
+#nav-icon2 span {
+  display: block;
+  position: absolute;
+  height: 3px;
+  width: 50%;
+  background: #ffffff;
+  opacity: 1;
+  transform: rotate(0deg);
+  transition: 0.25s ease-in-out;
+}
+
+#nav-icon2 span:nth-child(even) {
+  left: 50%;
+  border-radius: 0 9px 9px 0;
+}
+
+#nav-icon2 span:nth-child(odd) {
+  left: 0px;
+  border-radius: 9px 0 0 9px;
+}
+
+#nav-icon2 span:nth-child(1),
+#nav-icon2 span:nth-child(2) {
+  top: 0px;
+}
+
+#nav-icon2 span:nth-child(3),
+#nav-icon2 span:nth-child(4) {
+  top: 14px;
+}
+
+#nav-icon2 span:nth-child(5),
+#nav-icon2 span:nth-child(6) {
+  top: 28px;
+}
+
+#nav-icon2.open span:nth-child(1),
+#nav-icon2.open span:nth-child(6) {
+  transform: rotate(45deg);
+}
+
+#nav-icon2.open span:nth-child(2),
+#nav-icon2.open span:nth-child(5) {
+  transform: rotate(-45deg);
+}
+
+#nav-icon2.open span:nth-child(1) {
+  left: 3px;
+  top: 11px;
+}
+
+#nav-icon2.open span:nth-child(2) {
+  left: calc(50% - 4px);
+  top: 11px;
+}
+
+#nav-icon2.open span:nth-child(3) {
+  left: -50%;
+  opacity: 0;
+}
+
+#nav-icon2.open span:nth-child(4) {
+  left: 100%;
+  opacity: 0;
+}
+
+#nav-icon2.open span:nth-child(5) {
+  left: 3px;
+  top: 25px;
+}
+
+#nav-icon2.open span:nth-child(6) {
+  left: calc(50% - 4px);
+  top: 25px;
 }
 
 .outerPage {
@@ -270,6 +424,7 @@ body {
   position: relative;
   z-index: 10;
   width: auto;
+  min-width: 350px;
   background: transparent;
   padding: 20px;
   margin: 30px;
@@ -671,6 +826,7 @@ header {
   display: flex;
   pointer-events: none;
   overflow: hidden;
+  z-index: 10;
 }
 
 @media screen and (max-width: 1562px) {
@@ -808,6 +964,7 @@ header {
   justify-content: center;
   min-height: 110vh;
   padding-bottom: 40px;
+  min-width: 320px;
 }
 
 @media screen and (max-width: 1562px) {
@@ -1083,6 +1240,402 @@ header {
   }
 }
 
+/* --------------------------------------------PAGE-PORTFOLIO-------------------------------------------- */
+.page-portfolio {
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  padding: 12rem 4rem 6rem 4rem;
+  pointer-events: none;
+  overflow: hidden;
+  margin: 0;
+}
+@media screen and (max-width: 460px) {
+  .page-portfolio {
+    padding: 12rem 1rem 6rem 0;
+  }
+}
+.container-lg {
+  margin-bottom: 150px;
+  min-width: 320px;
+  max-width: 73%;
+}
+@media screen and (min-height: 930px) {
+  .container-lg {
+    max-width: 60%;
+  }
+}
+
+iframe {
+  min-width: 100%;
+  height: 650px;
+  position: relative;
+  margin: 0;
+}
+
+#container-iframe {
+  perspective: 15px;
+}
+
+#container-iframe a {
+  position: relative;
+  font-family: "Shadows Into Light";
+  /* font-family: "La Belle Aurore", cursive; */
+  color: white;
+  font-size: 1rem;
+  text-decoration: none;
+  top: 30px;
+}
+
+#container-iframe a:hover {
+  color: purple;
+}
+
+#container-iframe2 a {
+  position: relative;
+  top: 30px;
+  font-family: "Shadows Into Light";
+  /* font-family: "La Belle Aurore", cursive; */
+  color: white;
+  font-size: 1rem;
+  text-decoration: none;
+}
+
+#container-iframe2 a:hover {
+  color: purple;
+}
+
+#container-iframe3 a {
+  position: relative;
+  top: 30px;
+  font-family: "Shadows Into Light";
+  /* font-family: "La Belle Aurore", cursive; */
+  color: white;
+  font-size: 1rem;
+  text-decoration: none;
+}
+
+#container-iframe3 a:hover {
+  color: purple;
+}
+
+#inner-iframe {
+  transition: transform 0.5s;
+  box-shadow: 0 0 50px #782929;
+  border-radius: 15px;
+  overflow: hidden;
+}
+
+#container-frame:hover iframe {
+  opacity: 1;
+}
+
+#container-iframe2 {
+  perspective: 15px;
+}
+
+#inner-iframe2 {
+  transition: transform 0.5s;
+  box-shadow: 0 0 50px #782929;
+  border-radius: 15px;
+  overflow: hidden;
+}
+
+#container-frame2:hover iframe {
+  opacity: 1;
+}
+
+#container-iframe3 {
+  perspective: 15px;
+}
+
+#inner-iframe3 {
+  transition: transform 0.5s;
+  box-shadow: 0 0 50px #782929;
+  border-bottom-color: green;
+  border-radius: 15px;
+  overflow: hidden;
+}
+
+#container-frame3:hover iframe {
+  opacity: 1;
+}
+
+/* ------------------------------------------PAGE CONTACT---------------------------------------------- */
+
+.page-contact {
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  pointer-events: none;
+  display: flex;
+  overflow: hidden;
+  margin: 0;
+  text-align: center;
+  z-index: 10;
+}
+@media screen and (max-width: 1200px) {
+  .page-contact {
+    display: block;
+  }
+}
+
+.page-contact .text-zone {
+  position: relative;
+  width: 50%;
+  background: transparent;
+  padding: 12rem 2.5rem 8rem;
+  min-width: 300px;
+}
+@media screen and (max-width: 1200px) {
+  .page-contact .text-zone {
+    width: 75%;
+    margin: auto;
+    text-align: center;
+  }
+}
+@media screen and (max-width: 992px) {
+  .page-contact .text-zone {
+    padding: 6rem 2rem 3rem;
+  }
+}
+@media screen and (max-width: 700px) {
+  .page-contact .text-zone {
+    width: 100%;
+    text-align: center;
+  }
+}
+@media screen and (max-width: 480px) {
+  .page-contact .text-zone {
+    padding: 9rem 1rem 8rem;
+    text-align: left;
+  }
+}
+/* @media screen and (max-width: 390px) {
+  .page-contact .text-zone {
+    width: 100%;
+    margin-left: -60px;
+    text-align: left;
+    padding: 0.5rem;
+  }
+} */
+.contact-title {
+  font-size: 2.5rem;
+  color: white;
+  margin-bottom: 50px;
+}
+@media screen and (max-width: 480px) {
+  .contact-title {
+    font-size: 1.9rem;
+  }
+}
+.contact-title::before {
+  content: "<h2>";
+  font-family: "La Belle Aurore", cursive;
+  color: #515152;
+  font-size: 1.2rem;
+  position: relative;
+  top: -30px;
+  left: 10px;
+}
+
+.contact-title::after {
+  content: "</h2>";
+  font-family: "La Belle Aurore", cursive;
+  color: #515152;
+  font-size: 1.2rem;
+  position: relative;
+  top: 20px;
+}
+
+/* @media screen and (max-width: 390px) {
+  .contact-title::after {
+    left: 180px;
+    bottom: 20px;
+  }
+} */
+
+.contact-title span:hover {
+  display: inline-block;
+  color: teal;
+  animation: letters 0.9s;
+}
+
+.introText3 {
+  display: inline-block;
+  font-size: clamp(1rem, 1.5rem + 1.9vw, 1rem);
+  color: #fff;
+  margin: 10px 0;
+  font-style: italic;
+  opacity: 0;
+  animation: fade-in3 4s 0.1s forwards cubic-bezier(0.11, 0, 0.5, 0);
+  width: 80%;
+}
+
+.introText3::before {
+  content: "<p>";
+  font-family: "La Belle Aurore", cursive;
+  color: #515152;
+  font-size: 1.2rem;
+  position: absolute;
+  margin-top: -25px;
+  left: -10px;
+}
+
+.introText3::after {
+  content: "<p>";
+  font-family: "La Belle Aurore", cursive;
+  color: #515152;
+  font-size: 1.2rem;
+  position: absolute;
+  right: -10px;
+  bottom: -25px;
+}
+
+@media screen and (max-width: 1200px) {
+  .introText3 {
+    width: 99%;
+  }
+}
+@media screen and (max-width: 580px) {
+  .introText3 {
+    margin: 0;
+  }
+}
+@keyframes fade-in3 {
+  100% {
+    opacity: 1;
+    filter: blur(0);
+  }
+}
+
+/* ----FORM--- */
+
+#contact-form {
+  width: 100%;
+  padding-top: 5rem;
+  display: block;
+  position: relative;
+}
+@media screen and (max-width: 1200px) {
+  #contact-form {
+    width: 100%;
+  }
+}
+.form-field {
+  margin-bottom: 9px;
+}
+
+.underline {
+  position: relative;
+  bottom: 20px;
+  left: 0;
+  width: 0;
+  height: 2px;
+  display: inline-block;
+  background-color: #720669;
+  transition: width 0.3s ease-in-out;
+}
+
+.form-control:focus + .underline {
+  width: 100%;
+}
+
+.form-field:first-child {
+  width: 49%;
+  float: left;
+  margin-bottom: 9px;
+  clear: none;
+}
+
+.form-field:nth-child(2) {
+  width: 49%;
+  float: right;
+  clear: none;
+}
+
+.form-control {
+  outline: none;
+  border-radius: 0;
+  background-color: rgb(128, 234, 221);
+}
+
+.form-control:focus {
+  background-color: rgb(128, 234, 221);
+  -webkit-box-shadow: none;
+  box-shadow: none;
+}
+
+#contact-form label {
+  color: rgb(227, 215, 215);
+  font-size: 0.9rem;
+}
+
+.text-msg {
+  outline: none;
+  margin: 0;
+}
+
+.form-send {
+  border: 0;
+  text-transform: uppercase;
+  width: 100%;
+}
+
+.btn-send {
+  background: rgb(128, 234, 221) !important;
+  border-radius: 0;
+  color: rgb(131, 125, 125);
+}
+
+/* ---MAP--- */
+
+.contact-right {
+  width: 45%;
+  position: absolute !important;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  height: 100%;
+}
+@media screen and (max-width: 1200px) {
+  .contact-right {
+    position: relative !important;
+    height: 40rem;
+    width: 100%;
+  }
+}
+
+.google-map {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  height: 100%;
+  width: 100%;
+}
+@media screen and (max-width: 1200px) {
+  .google-map {
+    position: relative !important;
+    height: 40rem;
+    width: 100%;
+    padding: 5px 10px 100px 10px;
+  }
+}
+
+.gmap-canvas {
+  overflow: hidden;
+  background: none !important;
+  height: 100%;
+}
+
+#gmap-canvas {
+  width: 100%;
+  height: 100%;
+}
+
 /* ----------------------ANIMATED BANNER---------------- */
 
 .animatedContainer {
@@ -1091,7 +1644,7 @@ header {
 
 .rotatingContent1 {
   position: fixed;
-  left: -1%;
+  left: 1%;
   top: auto;
   right: -60%;
   bottom: auto;
@@ -1217,7 +1770,7 @@ header {
 #canvas {
   position: absolute;
   display: inline-block;
-  z-index: -1;
+  z-index: -10;
   left: 0;
   top: 0;
   pointer-events: none;
