--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -308,7 +308,7 @@ body {
   width: 40px;
   height: 45px;
   position: fixed;
-  top: 0;
+  top: 5px;
   right: 0.5%;
   transform: rotate(0deg);
   transition: 0.5s ease-in-out;
